--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -1,16 +1,14 @@
 section {
 	height: 100%;
 	width: 80%;
-	background-color: grey;
 }
 
 .defaultContainer {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	height: 95%;
+	height: 92%;
 	width: 100%;
-	background-color: grey;
 }
 
 .container {
@@ -18,7 +16,7 @@ section {
 	flex-direction: row;
 	height: 100%;
 	width: 100%;
-	background-color: white;
+	background-color: var(--primary-bg);
 }
 
 @media (width <= 1650px) {
