--- a/client/src/components/JobList/jobList.module.css
+++ b/client/src/components/JobList/jobList.module.css
@@ -6,5 +6,6 @@
 	width: 50%;
 
 	align-items: center;
-	background-color: white;
+	background-color: var(--primary-bg);
+	color: var(--primary-text);
 }
