--- a/client/src/components/NavBar/navBar.module.css
+++ b/client/src/components/NavBar/navBar.module.css
@@ -1,71 +1,83 @@
 .containerNav {
 	width: 100%;
-	height: 5%;
-	background-color: #333;
-	color: white;
+	height: 8%;
+	background-color: var(--primary-bg);
+	color: var(--primary-text);
+	padding: 0px 0px;
+	box-shadow: 0px 2px 5px var(--primary-shadow);
+	border-bottom: 1px solid var(--primary-border);
 	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+
 	align-items: center;
-	padding: 8px 20px;
-	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-	gap: 2rem;
 }
 
 .navItems {
 	display: flex;
-	align-items: center;
+	flex-direction: row;
+	justify-content: space-between;
+
 	gap: 2.5rem;
+	width: 80%;
 }
 
-.naviItems a {
-	text-decoration: none;
-	color: white;
-	font-weight: bold;
-	transition: color 0.3s ease-in-out;
+.containerIcons {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 20px;
 }
 
-.navItems a:hover {
-	color: #00bfff;
+.input {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+.input input {
+	background-color: var(--secondary-bg);
+	width: 250px;
+	height: 25px;
+	color: var(--primary-text);
+	border: 3px solid var(--primary-border);
+	border-radius: 5px;
+	outline: 2px solid var(--primary-border);
 }
 
-.searchContainer {
+.input button {
+	background: none;
+	border: none;
 	display: flex;
 	align-items: center;
-	gap: 0.3rem;
-}
-
-.searchInput {
-	height: 2rem;
-	width: 14rem;
-	border-radius: 8px;
-	border: 1px solid #444;
-	padding: 0 10px;
-	outline: none;
-	transition: all 0.3s ease-in-out;
-}
-
-.searchInput:focus {
-	border-color: #00bfff;
-	box-shadow: 0 0 5px rgba(0, 191, 255, 0.5);
-}
-
-.searchButton {
-	display: flex;
-	justify-content: center;
-	justify-items: center;
-	border-radius: 8px;
-	padding: 0.5rem 1rem;
-	background-color: #00bfff;
-	border: none;
-	color: white;
-	font-weight: bold;
-	font-size: 0.85rem;
-	white-space: nowrap;
 	cursor: pointer;
-	transition: background 0.3s ease-in-out;
-	width: 3rem;
-	height: 2rem;
+	color: red;
 }
 
-.searchbutton:hover {
-	background-color: #008ecc;
+.input svg {
+	fill: var(--primary-icon);
+	transition: all 0.3s ease;
+}
+
+.input svg:hover {
+	fill: var(--primary-color);
+}
+
+.pLogo {
+	border: 4px solid var(--primary-color);
+	border-radius: 10%;
+	border-top-left-radius: 30%;
+	border-bottom-right-radius: 30%;
+	padding: 4px 8px;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-weight: 600;
+	cursor: pointer;
+	font-stretch: expanded;
+	color: var(--secondary-text);
+}
+
+@media (width <= 1650px) {
+	.navItems {
+		width: 100%;
+		padding: 0px 20px;
+	}
 }
