--- a/client/src/components/jobDetail/jobDetail.module.css
+++ b/client/src/components/jobDetail/jobDetail.module.css
@@ -4,8 +4,111 @@
 	align-items: center;
 	width: 50%;
 	height: 100%;
-	background-color: white;
+	background-color: var(--primary-bg);
 	overflow-y: scroll;
+	overflow-x: hidden;
 	padding: 0px 20px;
-	color: black;
+	color: var(--primary-text);
+	gap: 20px;
+}
+
+.conditions {
+	display: flex;
+	flex-direction: column;
+	justify-content: left;
+	background-color: var(--primary-bg);
+	padding: 0 10px;
+	height: auto;
+	width: 100%;
+	padding-top: 20px;
+}
+
+.conditions h1 {
+	margin: 0;
+	margin-bottom: 15px;
+}
+
+.conditions p {
+	margin: 0;
+	font-weight: bold;
+}
+
+.containerLogo {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 5px;
+	width: max-content;
+	color: var(--primary-text);
+}
+.containerLogo img {
+	width: 48px;
+	height: 48px;
+	border-radius: 100px;
+}
+
+.auxContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.skills {
+	display: flex;
+	flex-direction: column;
+	justify-items: baseline;
+	background-color: red;
+}
+
+.containerButtons {
+	display: flex;
+	flex-direction: row;
+	gap: 15px;
+	align-items: center;
+	margin-top: 20px;
+}
+
+.containerButtons button {
+	border: 2px solid var(--primary-color);
+	border-radius: 50px;
+	cursor: pointer;
+}
+
+.buttonApply {
+	background-color: var(--primary-color);
+	color: var(--primary-bg);
+	font-weight: bold;
+	padding: 10px 30px;
+	transition: all 0.3s ease;
+}
+
+.buttonApply:hover {
+	background-color: var(--secondary-color);
+	border-color: var(--secondary-color);
+}
+
+.buttonSave {
+	background-color: var(--primary-bg);
+	color: var(--primary-color);
+	font-weight: bold;
+	padding: 10px 30px;
+	transition: all 0.3s ease;
+}
+.buttonSave:hover {
+	background-color: var(--primary-color);
+	color: var(--primary-bg);
+}
+
+.containerSkills {
+	position: absolute;
+	background-color: var(--primary-bg);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: start;
+	right: -220px;
+	padding: 10px 20px;
+	top: 0;
+	border-radius: 10px;
+	box-shadow: 1px 1px 10px 1px var(--primary-shadow);
 }
