--- a/client/src/components/CardJob/cardJob.module.css
+++ b/client/src/components/CardJob/cardJob.module.css
@@ -19,8 +19,8 @@ article {
 }
 
 .logo {
-	width: 80px;
-	height: 80px;
+	width: 64px;
+	height: 64px;
 	object-fit: contain;
 	border-radius: 100px;
 }
@@ -56,4 +56,10 @@ article :hover h3 {
 	position: absolute;
 	top: 0;
 	right: 20px;
+}
+
+@media (width <= 1650px) {
+	.cardContent h3 {
+		max-width: 280px;
+	}
 }
