--- a/client/src/components/NavBar/navBar.module.css
+++ b/client/src/components/NavBar/navBar.module.css
@@ -27,6 +27,13 @@
 	align-items: center;
 	gap: 20px;
 }
+.containerIcons button {
+	background: none;
+	border: 0;
+	cursor: pointer;
+	padding: 0;
+	margin: 0;
+}
 
 .input {
 	display: flex;
