--- a/client/src/components/CreateJobForm/createJobForm.module.css
+++ b/client/src/components/CreateJobForm/createJobForm.module.css
@@ -56,6 +56,7 @@ textarea {
 .jobDetail {
 	display: flex;
 	flex-direction: column;
+
 	align-items: center;
 	width: 50%;
 	height: 100%;
@@ -67,13 +68,12 @@ textarea {
 	padding: 0px 20px;
 	color: var(--primary-text);
 	gap: 20px;
-	background-color: blue;
 }
 
 .conditions {
 	display: flex;
 	flex-direction: column;
-	justify-content: left;
+	justify-content: flex-start;
 	background-color: var(--primary-bg);
 	padding: 0 10px;
 	height: auto;
@@ -172,8 +172,9 @@ textarea {
 }
 
 .containerDescription {
-	display: flex;
+	white-space: pre-wrap; /* Permite saltos de línea y ajusta el texto */
+	word-wrap: break-word; /* Rompe palabras largas */
+	overflow-wrap: break-word; /* Alternativa para navegadores modernos */
+	width: 100%; /* Asegura que el contenedor no crezca demasiado */
 	overflow-x: hidden;
-	max-width: 100%;
-	background-color: red;
 }
