--- a/client/src/components/CreateJobForm/createJobForm.module.css
+++ b/client/src/components/CreateJobForm/createJobForm.module.css
@@ -3,7 +3,7 @@
 	justify-content: center;
 	height: 92%;
 	width: 100%;
-	overflow-y: auto;
+	overflow-y: hidden;
 }
 section {
 	background-color: var(--primary-bg);
@@ -27,12 +27,12 @@ section {
 	align-items: flex-start;
 	background: var(--secondary-bg);
 	color: var(--primary-text);
-	padding: 20px;
+	padding: 0px 20px;
+
 	border-radius: 10px;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 	width: 45%;
-	height: 95%;
-	overflow-x: none;
+	height: 90%;
 	overflow-x: hidden;
 	overflow-y: auto;
 	border: 1px solid var(--primary-border);
@@ -58,7 +58,7 @@ input {
 .quill {
 	background-color: var(--primary-bg);
 	border-radius: 10px;
-	min-height: 200px;
+	min-height: 60px;
 }
 
 .buttonSubmit {
@@ -71,7 +71,7 @@ input {
 	border-radius: 5px;
 	cursor: pointer;
 	transition: all 0.3s ease;
-	margin-top: 60px;
+	margin-top: 30px;
 }
 
 .buttonSubmit:hover {
@@ -87,13 +87,14 @@ input {
 	flex-direction: column;
 	align-items: center;
 	width: 50%;
-	height: 100%;
+	height: 90%;
 	background-color: var(--primary-bg);
 	border-radius: 10px;
 	padding: 0px 20px;
 	color: var(--primary-text);
 	gap: 20px;
 	overflow-x: hidden;
+	border: 1px solid var(--primary-border);
 }
 
 .conditions {
