--- a/client/src/components/CreateJobForm/createJobForm.module.css
+++ b/client/src/components/CreateJobForm/createJobForm.module.css
@@ -46,7 +46,7 @@ section {
 }
 
 input {
-	width: 100%;
+	width: 250px;
 	padding: 10px;
 	border: 1px solid var(--primary-border);
 	border-radius: 5px;
@@ -54,11 +54,15 @@ input {
 	color: var(--primary-text);
 	resize: none;
 }
+.logoInput input {
+	width: 94%;
+}
 
 .quill {
 	background-color: var(--primary-bg);
 	border-radius: 10px;
-	min-height: 60px;
+
+	height: 180px;
 }
 
 .buttonSubmit {
@@ -66,12 +70,11 @@ input {
 	color: white;
 	font-weight: bold;
 	width: 100px;
-	padding: 10px;
+	padding: 10px 10px;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
 	transition: all 0.3s ease;
-	margin-top: 30px;
 }
 
 .buttonSubmit:hover {
@@ -94,6 +97,7 @@ input {
 	color: var(--primary-text);
 	gap: 20px;
 	overflow-x: hidden;
+	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 	border: 1px solid var(--primary-border);
 }
 
@@ -221,8 +225,4 @@ input {
 .labelAndInput {
 	display: flex;
 	flex-direction: column;
-}
-
-.logoInput {
-	width: 97%;
 }
