--- a/client/src/components/jobDetail/jobDetail.module.css
+++ b/client/src/components/jobDetail/jobDetail.module.css
@@ -13,6 +13,17 @@
 	max-width: 100%;
 }
 
+.locationItem {
+	padding: 4px 8px;
+
+	color: var(--primary-text);
+
+	font-size: 14px;
+}
+
+.listLocation {
+	position: relative;
+}
 .conditions {
 	display: flex;
 	flex-direction: column;
@@ -59,7 +70,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-items: baseline;
-	background-color: red;
 }
 
 .containerButtons {
@@ -101,22 +111,50 @@
 	color: var(--primary-bg);
 }
 
+.containerLocations {
+	position: fixed;
+	background-color: var(--primary-bg);
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	overflow-y: auto;
+	max-height: 300px;
+	width: 150px;
+	right: 550px;
+	top: 300px;
+	border: 1px solid var(--primary-border);
+	box-shadow: 1px 1px 10px 1px var(--primary-shadow);
+	border-radius: 10px;
+}
+
+.listItems {
+	display: flex;
+	flex-direction: column;
+}
+
 .containerSkills {
 	position: absolute;
 	background-color: var(--primary-bg);
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: start;
+	gap: 10px;
 	align-items: start;
 	right: -100px;
 	padding: 10px 20px;
 	top: 0;
-
+	right: -250px;
+	overflow-y: auto;
+	max-height: 200px;
+	max-width: 200px;
 	border-radius: 10px;
+	border: 2px solid var(--primary-border);
 	box-shadow: 1px 1px 10px 1px var(--primary-shadow);
+	z-index: 20;
 }
 .containerSkills li {
 	display: flex;
+	gap: 10px;
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
