--- a/client/src/components/savedJobs/savedJobs.module.css
+++ b/client/src/components/savedJobs/savedJobs.module.css
@@ -1,12 +1,11 @@
-.section {
+.section_savedJobs {
 	height: 100%;
 	width: 80%;
-	padding: 0px;
 	padding-top: 15px;
 	padding: 0px 0px;
 }
 
-.defaultContainer {
+.defaultContainer_savedJobs {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -15,17 +14,11 @@
 	padding: 0px 0px;
 }
 
-.container {
+.container_savedJobs {
 	display: flex;
 	flex-direction: row;
 	height: 100%;
 	width: 100%;
 	background-color: var(--primary-bg);
 	padding: 0px 0px;
-}
-
-@media (width <= 1650px) {
-	section {
-		width: 85%;
-	}
 }
